test/asm/invalid-numbers.err
error: invalid-numbers.asm(11) -> invalid-numbers.asm::try(2):
    Invalid integer constant, no digits after '$'
error: invalid-numbers.asm(12) -> invalid-numbers.asm::try(2):
    Invalid graphics constant, no digits after '`'
error: invalid-numbers.asm(13) -> invalid-numbers.asm::try(2):
    Invalid integer constant, no digits after '%'
error: invalid-numbers.asm(14) -> invalid-numbers.asm::try(2):
    Invalid integer constant, no digits after '&'
error: invalid-numbers.asm(15) -> invalid-numbers.asm::try(2):
    Invalid integer constant, no digits after '$'
warning: invalid-numbers.asm(18) -> invalid-numbers.asm::try(2): [-Wlarge-constant]
    Integer constant is too large
warning: invalid-numbers.asm(19) -> invalid-numbers.asm::try(2): [-Wlarge-constant]
    Integer constant is too large
warning: invalid-numbers.asm(20) -> invalid-numbers.asm::try(2): [-Wlarge-constant]
    Integer constant is too large
warning: invalid-numbers.asm(21) -> invalid-numbers.asm::try(2): [-Wlarge-constant]
    Integer constant is too large
warning: invalid-numbers.asm(22) -> invalid-numbers.asm::try(2): [-Wlarge-constant]
    Graphics constant is too large; only first 8 pixels considered
warning: invalid-numbers.asm(23) -> invalid-numbers.asm::try(2): [-Wlarge-constant]
    Magnitude of fixed-point constant is too large
error: invalid-numbers.asm(26) -> invalid-numbers.asm::try(2):
    Invalid fixed-point constant, no significant digits after 'q'
error: invalid-numbers.asm(29) -> invalid-numbers.asm::try(2):
    Fixed-point constant precision must be between 1 and 31
Assembly aborted with 7 errors!
